# bitonicSortCuda

./: CMakeLists.txt  README.md
docs/: bitonic_sort.pptx
results/: merged_sorting_results.csv  merged_sorting_results.ods  sorting_results_12.csv  sorting_results_14.csv  sorting_results_16.csv  sorting_results_18.csv  sorting_results_20.csv  sorting_results_22.csv  sorting_results_24.csv  sorting_results_26.csv  sorting_results_28.csv  sorting_results_30.csv
results/run_CPU_20241018_115903/: array_length_2^12_threads_128.csv  array_length_2^12_threads_16.csv  array_length_2^12_threads_2.csv  array_length_2^12_threads_32.csv  array_length_2^12_threads_4.csv  array_length_2^12_threads_64.csv  array_length_2^12_threads_8.csv  array_length_2^22_threads_128.csv  array_length_2^22_threads_16.csv  array_length_2^22_threads_2.csv  array_length_2^22_threads_32.csv  array_length_2^22_threads_4.csv  array_length_2^22_threads_64.csv  array_length_2^22_threads_8.csv  array_length_2^30_threads_16.csv  array_length_2^30_threads_2.csv  array_length_2^30_threads_32.csv  array_length_2^30_threads_4.csv  array_length_2^30_threads_64.csv  array_length_2^30_threads_8.csv
results/run_CPU_20241018_155334/: array_length_2^16_threads_1.csv  array_length_2^16_threads_128.csv  array_length_2^16_threads_16.csv  array_length_2^16_threads_2.csv  array_length_2^16_threads_32.csv  array_length_2^16_threads_4.csv  array_length_2^16_threads_64.csv  array_length_2^16_threads_8.csv  array_length_2^22_threads_1.csv  array_length_2^22_threads_128.csv  array_length_2^22_threads_16.csv  array_length_2^22_threads_2.csv  array_length_2^22_threads_32.csv  array_length_2^22_threads_4.csv  array_length_2^22_threads_64.csv  array_length_2^22_threads_8.csv  array_length_2^28_threads_1.csv  array_length_2^28_threads_128.csv  array_length_2^28_threads_16.csv  array_length_2^28_threads_2.csv  array_length_2^28_threads_32.csv  array_length_2^28_threads_4.csv  array_length_2^28_threads_64.csv  array_length_2^28_threads_8.csv  merged_sorting_results_2^16.csv  merged_sorting_results_2^16.ods  merged_sorting_results_2^22.csv  merged_sorting_results_2^22.ods  merged_sorting_results_2^28.csv  merged_sorting_results_2^28.ods
results/run_CPU_20241024_120511/: array_length_2^17_threads_1.csv  array_length_2^17_threads_10.csv  array_length_2^17_threads_11.csv  array_length_2^17_threads_12.csv  array_length_2^17_threads_13.csv  array_length_2^17_threads_14.csv  array_length_2^17_threads_15.csv  array_length_2^17_threads_16.csv  array_length_2^17_threads_17.csv  array_length_2^17_threads_18.csv  array_length_2^17_threads_19.csv  array_length_2^17_threads_2.csv  array_length_2^17_threads_20.csv  array_length_2^17_threads_21.csv  array_length_2^17_threads_22.csv  array_length_2^17_threads_23.csv  array_length_2^17_threads_24.csv  array_length_2^17_threads_25.csv  array_length_2^17_threads_26.csv  array_length_2^17_threads_27.csv  array_length_2^17_threads_28.csv  array_length_2^17_threads_29.csv  array_length_2^17_threads_3.csv  array_length_2^17_threads_30.csv  array_length_2^17_threads_31.csv  array_length_2^17_threads_32.csv  array_length_2^17_threads_4.csv  array_length_2^17_threads_5.csv  array_length_2^17_threads_6.csv  array_length_2^17_threads_7.csv  array_length_2^17_threads_8.csv  array_length_2^17_threads_9.csv  array_length_2^22_threads_1.csv  array_length_2^22_threads_10.csv  array_length_2^22_threads_11.csv  array_length_2^22_threads_12.csv  array_length_2^22_threads_13.csv  array_length_2^22_threads_14.csv  array_length_2^22_threads_15.csv  array_length_2^22_threads_16.csv  (+26 more)
results/run_CPU_20241025_091142/: array_length_2^17_threads_1.csv  array_length_2^17_threads_10.csv  array_length_2^17_threads_11.csv  array_length_2^17_threads_12.csv  array_length_2^17_threads_13.csv  array_length_2^17_threads_14.csv  array_length_2^17_threads_15.csv  array_length_2^17_threads_16.csv  array_length_2^17_threads_17.csv  array_length_2^17_threads_18.csv  array_length_2^17_threads_19.csv  array_length_2^17_threads_2.csv  array_length_2^17_threads_20.csv  array_length_2^17_threads_21.csv  array_length_2^17_threads_22.csv  array_length_2^17_threads_23.csv  array_length_2^17_threads_24.csv  array_length_2^17_threads_25.csv  array_length_2^17_threads_26.csv  array_length_2^17_threads_27.csv  array_length_2^17_threads_28.csv  array_length_2^17_threads_29.csv  array_length_2^17_threads_3.csv  array_length_2^17_threads_30.csv  array_length_2^17_threads_31.csv  array_length_2^17_threads_32.csv  (+77 more)
scripts/: merge.sh  merge_results.sh  merge_results_CPU.sh  run.sh  run_CPU.sh  run_GPU_blocks.sh
src/cpu/: TimerCPU.h  (+4 more)
(+41 files in other folders)
